# mousekey

./: CMakeLists.txt  MousetoKey.asta  README.html  README.md  README.org  README.tex  SearchDevEventTest  keymouse  rtags.sh  test.el  uinputTest
IgnoreGitFiles/: MousetoKey.asta  memo.txt  outputBackNext.txt  toSetKeyboard.org  todo.org
IgnoreGitFiles/src_bef/: ControllMouse.cpp~  ControllMouse.hpp  MouseConfig.hpp  MouseMonitor.cpp  MouseMonitor.cpp~  SearchDevEvent.cpp  Uinput.cpp
exec/: HyperKeyEventTest  KeyboardMapTester  KeyboardTest  MouseEventTester  build.sh  mousekey  test.conf
src/: .#BrowserBackEvent.hpp  BackSpaceCursorEvent.cpp  BackSpaceCursorEvent.hpp  BrowserBackEvent.cpp  BrowserBackEvent.hpp  BrowserNextEvent.cpp  BrowserNextEvent.hpp  ChangeModeEvent.cpp  ChangeModeEvent.hpp  DeleteCursorEvent.cpp  DeleteCursorEvent.hpp  DownCursorEvent.cpp  DownCursorEvent.hpp  EndCursorEvent.cpp  EndCursorEvent.hpp  EnterCursorEvent.cpp  EnterCursorEvent.hpp  GoDownEvent.cpp  GoDownEvent.hpp  GoLeftEvent.cpp  GoLeftEvent.hpp  GoRightEvent.cpp  GoRightEvent.hpp  GoUpEvent.cpp  GoUpEvent.hpp  HomeCursorEvent.cpp  HomeCursorEvent.hpp  HyperKeyEvent.cpp  HyperKeyEvent.hpp  Keyboard.cpp  Keyboard.hpp  KeyboardMap.cpp  KeyboardMap.hpp  KeyboardMode.cpp  KeyboardMode.hpp  LeftCursorEvent.cpp  LeftCursorEvent.hpp  LeftKeyEvent.cpp  LeftKeyEvent.hpp  MiddleKeyEvent.cpp  (+33 more)
src/research/: a.out  sample  sample.c  sample_ioctl.cpp  testStatic.cpp
src/testsrc/: HyperKeyEventTest.cpp  KeyboardMapTester.cpp  KeyboardTester.cpp  Keyboardtest.cpp  MouseEventListTester.cpp  SeveralMouseEventTest.cpp  a.out  main.cpp  mousekey.cpp  test.cpp
src_bef/: ControllMouse.cpp  EventEnum.hpp  ReadConfig.hpp  SearchDevEvent.hpp  Uinput.hpp  mouse  test.cpp~
src_bef/testsrc/: SearchDevEventTester.cpp  TestMain.cpp  UinputTest.cpp
