cmake_minimum_required(VERSION 2.8)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
include_directories(./src)
include_directories(./src/testsrc)

#add_executable(PathTest ./src/Path.cpp ./testsrc/PathTest.cpp)

ADD_DEFINITIONS("-std=c++11 -g")


add_executable(../exec/mousekey ./src/testsrc/main.cpp ./src/MouseEventList.cpp ./src/ReadConfig.cpp ./src/HyperKeyEvent.cpp ./src/GoUpEvent.cpp ./src/GoLeftEvent.cpp ./src/MouseEvent.cpp ./src/Uinput.cpp ./src/KeyboardMap.cpp ./src/SearchDevEvent.cpp ./src/Keyboard.cpp ./src/GoRightEvent.cpp ./src/GoDownEvent.cpp ./src/RightKeyEvent.cpp ./src/LeftKeyEvent.cpp ./src/MiddleKeyEvent.cpp ./src/WheelUpEvent.cpp ./src/WheelDownEvent.cpp ./src/QuitEvent.cpp ./src/SpeedUpEvent.cpp ./src/SpeedDownEvent.cpp ./src/BrowserBackEvent.cpp ./src/BrowserNextEvent.cpp ./src/ChangeModeEvent.cpp  ./src/EndCursorEvent.cpp ./src/DeleteCursorEvent.cpp ./src/LeftCursorEvent.cpp ./src/RightCursorEvent.cpp ./src/HomeCursorEvent.cpp ./src/DownCursorEvent.cpp ./src/BackSpaceCursorEvent.cpp ./src/EnterCursorEvent.cpp ./src/UpCursorEvent.cpp ./src/KeyboardMode.cpp ./src/Mode.cpp ./src/SeveralMouseEvent.cpp)

#add_executable(../exec/SeveralMouseEventTest ./src/testsrc/SeveralMouseEventTest.cpp ./src/MouseEventList.cpp ./src/ReadConfig.cpp ./src/HyperKeyEvent.cpp ./src/GoUpEvent.cpp ./src/GoLeftEvent.cpp ./src/MouseEvent.cpp ./src/Uinput.cpp ./src/KeyboardMap.cpp ./src/SearchDevEvent.cpp ./src/Keyboard.cpp ./src/GoRightEvent.cpp ./src/GoDownEvent.cpp ./src/RightKeyEvent.cpp ./src/LeftKeyEvent.cpp ./src/MiddleKeyEvent.cpp ./src/WheelUpEvent.cpp ./src/WheelDownEvent.cpp ./src/QuitEvent.cpp ./src/SpeedUpEvent.cpp ./src/SpeedDownEvent.cpp ./src/BrowserBackEvent.cpp ./src/BrowserNextEvent.cpp ./src/ChangeModeEvent.cpp  ./src/EndCursorEvent.cpp ./src/DeleteCursorEvent.cpp ./src/LeftCursorEvent.cpp ./src/RightCursorEvent.cpp ./src/HomeCursorEvent.cpp ./src/DownCursorEvent.cpp ./src/BackSpaceCursorEvent.cpp ./src/EnterCursorEvent.cpp ./src/UpCursorEvent.cpp ./src/KeyboardMode.cpp ./src/Mode.cpp ./src/SeveralMouseEvent.cpp)

#add_executable(../exec/SearchDevEventTest ./src/testsrc/SearchDevEventTester.cpp ./src/MouseEventList.cpp ./src/ReadConfig.cpp ./src/HyperKeyEvent.cpp ./src/GoUpEvent.cpp ./src/GoLeftEvent.cpp ./src/MouseEvent.cpp ./src/Uinput.cpp ./src/KeyboardMap.cpp ./src/SearchDevEvent.cpp ./src/Keyboard.cpp ./src/GoRightEvent.cpp ./src/GoDownEvent.cpp ./src/RightKeyEvent.cpp ./src/LeftKeyEvent.cpp ./src/MiddleKeyEvent.cpp ./src/WheelUpEvent.cpp ./src/WheelDownEvent.cpp ./src/QuitEvent.cpp ./src/SpeedUpEvent.cpp ./src/SpeedDownEvent.cpp ./src/BrowserBackEvent.cpp ./src/BrowserNextEvent.cpp ./src/ChangeModeEvent.cpp  ./src/EndCursorEvent.cpp ./src/DeleteCursorEvent.cpp ./src/LeftCursorEvent.cpp ./src/RightCursorEvent.cpp ./src/HomeCursorEvent.cpp ./src/DownCursorEvent.cpp ./src/BackSpaceCursorEvent.cpp ./src/EnterCursorEvent.cpp ./src/UpCursorEvent.cpp ./src/KeyboardMode.cpp ./src/Mode.cpp ./src/SeveralMouseEvent.cpp)

#add_executable(../exec/keyboardTest ./src/testsrc/KeyboardTester.cpp ./src/KeyboardMode.cpp ./src/Mode.cpp ./src/ReadConfig.cpp ./src/HyperKeyEvent.cpp ./src/GoUpEvent.cpp ./src/GoLeftEvent.cpp ./src/MouseEvent.cpp ./src/Uinput.cpp ./src/KeyboardMap.cpp ./src/SearchDevEvent.cpp ./src/GoRightEvent.cpp ./src/GoDownEvent.cpp ./src/RightKeyEvent.cpp ./src/LeftKeyEvent.cpp ./src/MiddleKeyEvent.cpp ./src/WheelUpEvent.cpp ./src/WheelDownEvent.cpp ./src/QuitEvent.cpp ./src/SpeedUpEvent.cpp ./src/SpeedDownEvent.cpp ./src/BrowserBackEvent.cpp ./src/BrowserNextEvent.cpp ./src/EndCursorEvent.cpp ./src/DeleteCursorEvent.cpp ./src/LeftCursorEvent.cpp ./src/RightCursorEvent.cpp ./src/HomeCursorEvent.cpp ./src/DownCursorEvent.cpp ./src/BackSpaceCursorEvent.cpp ./src/EnterCursorEvent.cpp ./src/UpCursorEvent.cpp)
